Bug 506173 don't dispatch activate events from nsIWidget::SetFocus() r=enndeakin